--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "repository": "https://github.com/mariosp/football-team-viewer",
   "license": "MIT",
   "dependencies": {
-    "angular": "1.7.x",
-    "angular-resource": "1.7.x",
-    "angular-route": "1.7.x",
+    "angular": "^1.7.9",
+    "angular-resource": "^1.7.9",
+    "angular-route": "^1.7.9",
     "bootstrap": "3.3.x",
-    "express": "^4.16.4",
-    "jquery": "3.3.x",
-    "cpx": "^1.5.0"
+    "cpx": "^1.5.0",
+    "express": "^4.17.1",
+    "jquery": "3.3.x"
   },
   "devDependencies": {
     "http-server": "^0.11.1"
